[package]
edition = "2018"
license = "Apache-2.0/MIT"
name = "rtg"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
partial_struct = {version = "0.1.0", path = "./partial-struct"}
rtg_model = {version = "0.1.0", path = "./model"}
rtg_query = {version = "0.1.0", path = "./query"}
rtg_server = {version = "0.1.0", path = "./server"}
rtg_sql_schema = {version = "0.1.0", path = "./sql-schema"}
rtg_wasm = {version = "0.1.0", path = "./wasm"}

[dev-dependencies]
glob = {version = "0.3.0"}
graphql-parser = {version = "0.3.0"}
rustc-hash = {version = "1.0"}
scooby = {version = "0.4.0"}
serde = {version = "1.0.130", features = ["derive", "rc"]}
serde_json = {version = "1.0.68"}
similar = {version = "2.1.0"}
similar-asserts = {version = "1.1.0"}
thiserror = {version = "1.0.29"}
# cargo-insta = {version = "1.8.0"}
# cargo-watch = {version = "8.1.1"}
# wasm-pack = {version = "0.10.1"}

[workspace]
members = [
  "partial-struct",
  "query",
  "server",
  "model",
  "wasm",
]
