[package]
edition = "2018"
license = "Apache-2.0/MIT"
name = "rtg_server"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = {version = "1.0.44"}
bytes = {version = "1.1.0"}
env_logger = {version = "0.9.0"}
futures = {version = "0.3.17"}
graphql-parser = {version = "0.3.0"}
handlebars = {version = "4.1.3"}
juniper = {version = "0.15.7"}
juniper_graphql_ws = {version = "0.3.0", optional = true}
juniper_warp = {version = "0.7.0"}
log = {version = "0.4.14"}
scooby = {version = "0.4.0"}
serde = {version = "1.0.130", features = ["derive"]}
serde_json = {version = "1.0.68"}
thiserror = {version = "1.0.29"}
tokio = {version = "1.12.0", features = ["full"]}
warp = {version = "0.3.1"}
