[package]
edition = "2018"
license = "Apache-2.0/MIT"
name = "rtg_testing"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["lib"]

[dev-dependencies]
glob = {version = "0.3.0"}
graphql-parser = {version = "0.3.0"}
handlebars = {version = "4.1.3"}
rtg_gql_to_pgsql = {version = "0.1.0", path = "../gql-to-pgsql"}
rtg_model = {version = "0.1.0", path = "../model"}
rtg_model_cache = {version = "0.1.0", path = "../model-cache"}
rustc-hash = {version = "1.0"}
scooby = {version = "0.4.0"}
serde = {version = "1.0.130", features = ["derive", "rc"]}
serde_json = {version = "1.0.68"}
similar = {version = "2.1.0"}
similar-asserts = {version = "1.1.0"}
thiserror = {version = "1.0.29"}
