[package]
edition = "2018"
license = "Apache-2.0/MIT"
name = "rtg_wasm"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

# See https://rustwasm.github.io/book/reference/code-size.html
[profile.release]
lto = true
opt-level = 'z'

[dependencies]
graphql-parser = {version = "0.3.0"}
handlebars = {version = "4.1.3"}
scooby = {version = "0.4.0"}
serde = {version = "1.0.130", features = ["derive"]}
serde_json = {version = "1.0.68"}
wasm-bindgen = {version = "0.2.78"}
